[gd_scene load_steps=5 format=3 uid="uid://ucbmkqy0jydj"]

[ext_resource type="Texture2D" uid="uid://b8qns5bn3y57k" path="res://icon.svg" id="1_ulcgi"]
[ext_resource type="Script" uid="uid://buipenoqnayc" path="res://binocular_camera.gd" id="2_nxogm"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_nxogm"]
albedo_texture = ExtResource("1_ulcgi")
uv1_scale = Vector3(2, 2, 2)
uv1_offset = Vector3(0.5, 0, 0)

[sub_resource type="BoxMesh" id="BoxMesh_drvgu"]

[node name="World" type="Node3D"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 0, 0, -2.3926)
material_override = SubResource("StandardMaterial3D_nxogm")
mesh = SubResource("BoxMesh_drvgu")

[node name="Sun" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.557163, -0.647535, 0.519872, 0.165201, 0.699968, 0.694805, -0.813804, -0.301237, 0.49697, 0, 0, 0)

[node name="BinocularCamera" type="Node3D" parent="."]
script = ExtResource("2_nxogm")

[node name="LeftEyeContainer" type="SubViewportContainer" parent="BinocularCamera"]
anchors_preset = -1
anchor_right = 0.5
anchor_bottom = 1.0
stretch = true

[node name="LeftEye" type="SubViewport" parent="BinocularCamera/LeftEyeContainer"]
size = Vector2i(576, 648)

[node name="Camera3D" type="Camera3D" parent="BinocularCamera/LeftEyeContainer/LeftEye"]
keep_aspect = 0

[node name="RightEyeContainer" type="SubViewportContainer" parent="BinocularCamera"]
anchors_preset = -1
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
stretch = true

[node name="RightEye" type="SubViewport" parent="BinocularCamera/RightEyeContainer"]
handle_input_locally = false
size = Vector2i(576, 648)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="BinocularCamera/RightEyeContainer/RightEye"]
keep_aspect = 0
